--- a/device/public/peerconnection/main.css
+++ b/device/public/peerconnection/main.css
@@ -6,11 +6,16 @@ button {
 
 #content{
 	display:flex;
-	justify-content:center;
-	align-items:center;
+	justify-content:space-around;
+	
 	width:100%;
 	margin:0 0 1em 0;
 	padding:0 0 0.5em 0;	
+}
+
+#content img{
+	width:240px;
+	height:240px;	
 }
 
 #preview textarea {
